--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "Jake Waltrip <jake.waltrip@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "concurrently": "^4.0.1",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "mongoose": "^5.3.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
