--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.18.3",
     "concurrently": "^4.0.1",
     "express": "^4.16.3",
+    "moment": "^2.22.2",
     "mongoose": "^5.3.2"
   },
   "devDependencies": {
