--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "moment": "^2.22.2",
-    "mongoose": "^5.3.2",
-    "react-simple-dropdown": "^3.2.3"
+    "mongoose": "^5.3.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
